@@ -13,7 +13,9 @@ Changes to 1.3.0 +nb
 *lib/output.php --> bug, output for debug did not show anymore, typo in binary comparison
 *lib/pageparts.php --> added "Manage Modules" shortlink to top right corner (petitiondisplay)
 *lib/pageparts.php --> another unset $list stuff fixed in there 
+*lib/pageparts.php --> link for changing the favicon to ... more modern stuff
 *lib/sendmail.php --> sending to a non-valid email address format should not be allowed -> skipped (no good error handling optional, because it is not a system error)
+*lib/serialization.php --> unserialize() is not safe, and needs a wrapper for newer php versions
 *lib/showform.php --> unset nightmare
 
 [CHANGES]
